# comicbake

./: CastList.hs  CmdArgs.hs  ComicBake.hs  Compiler.hs  Drawing.hs  Geometry.hs  ImageMapParse.hs  Layout.hs  Main.hs  NOTES  Objects.hs  Parse.hs  Pix.hs  README  README.md  SA.hs  Sanitise.hs  Script.hs  ScriptParse.hs  Stitch.hs  TODO  Transform.hs  comicbake.cabal  example.script  script.cabal
Parsing/: ScriptParse.hs
example/: conversation.script  empty.script  example.script  insult.script  onesided.script
example/scenes/: alasdair.map  conversation.map  scene1.map
src/: CastList.hs  CmdArgs.hs  Drawing.hs  Geometry.hs  Layout.hs  Locations.hs  Main.hs  Pix.hs  Script.hs
src/Comic/: Geometry.hs  Layout.hs  Locations.hs  Objects.hs  Transform.hs
src/Graphics/: Drawing.hs  Pix.hs  Stitch.hs
src/Parsing/: ImageMapParse.hs  ScriptParse.hs
src/Publish/: Flickr.hs
