Name:                comicbake
Version:             0.0
Stability:           experimental
Description:         Generate web comics from images and scripts.
Synopsis:            Turn scripts into comics!
License:             GPL
Extra-source-files:  README
Author:              Dougal Stanton
Maintainer:          dougal@dougalstanton.net
Category:            Graphics
Build-type:          Simple
Cabal-version:       >= 1.2

flag testing
  description: Testing mode
  default: False

executable comicbake
  main-is:	     Main.hs

  ghc-options:         -Wall
  if flag(testing)
    ghc-options: -Werror
  Build-Depends:       base,containers,split,tagsoup,parsec,filepath,
                       random,gd,hsmagick,cmdargs,directory
