Name:                comicbake
Version:             0.2
Stability:           experimental
Description:         Generate web comics from images and scripts.
Synopsis:            Turn scripts into comics!
License:             GPL
Extra-source-files:  README.md,TODO
Author:              Dougal Stanton
Maintainer:          dougal@dougalstanton.net
Category:            Graphics
Build-type:          Simple
Cabal-version:       >= 1.2

flag testing
  description: Testing mode
  default: False

executable comicbake
  main-is:	     Main.hs
  hs-source-dirs: src

  ghc-options:         -Wall
  if flag(testing)
    ghc-options: -Werror
  Build-Depends:       base,containers,split,tagsoup,parsec,filepath,system-filepath,
                       random,gd,imagemagick,optparse-applicative,directory,flickr,network
